Self_Paced_Exercices/Traffic_Management/Service_Entry_HTTPS_Backend/answer/Gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
    app.kubernetes.io/instance: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: http
      hosts:
        - "*"
