Self_Paced_Exercices/Traffic_Management/Service_Entry_HTTPS_Backend/answer/DestinationRoute.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ifconfigme
  namespace: default
spec:
  host: ifconfig.me
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
         mode: SIMPLE
